--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -17,12 +17,14 @@ spec:
     spec:
       containers:
       - name: travel-agent-container
-        # Placeholder for the GitHub Actions script to substitute the full ECR image URI
-        image: <ECR_IMAGE_PLACEHOLDER> 
+        image: 623386377217.dkr.ecr.us-west-2.amazonaws.com/ai-travel-agent-repo:e4e127eb36e2e5d9d88759772385a9fe0ceb28e3 
         imagePullPolicy: Always
         ports:
         - containerPort: 3000 # Matches the port exposed by your Express app (server.js)
         resources:
-          limits:
+          requests: # Guaranteed minimum resources
+            memory: "64Mi"
+            cpu: "100m" # 100 millicores (0.1 CPU core)
+          limits:   # Maximum allowed resources (was incorrectly formatted)
             memory: "128Mi"
-            cpu: "500m"
+            cpu: "500m" # 500 millicores (0.5 CPU core)
